fix bugs on mobile version

--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -60,6 +60,11 @@
 
   transition: opacity, color 0.4s ease;
 
+  @include media-tablet() {
+    opacity: 1;
+    color: $red;
+  }
+
   &:hover {
     color: $red;
   }
