--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -6,6 +6,14 @@ $mediumaquamarine: #80cfbf;
 $green: #108f16;
 $gray: #999999;
 
+$tablet-width: 768px;
+
+@mixin media-tablet {
+  @media screen and (max-width: $tablet-width) {
+    @content;
+  }
+}
+
 @mixin checkbox {
   content: '✓';
   position: absolute;
